responsive navbar spacing fixes for mobile

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -26,14 +26,15 @@
 	}
 	#notifications {
 		border-radius: 0px;
-		margin: 5px 0px 2px;
+		margin: 5px 0px 1px;
+		box-shadow: none;
 	}
 	.navbar .unread {
 		background: $blackhole!important;
 	}
 	#notifications-area {
 		width:100%;
-		margin: 0 0 2px;
+		margin: 0 0 1px;
 	}
 	.navbar #notification:last-of-type {
 		border-bottom: 1px solid $midnight;
@@ -46,6 +47,8 @@
 		color: #fff;
 		text-shadow: 0 0 0;
 		text-align: center;
+		padding: 5px 15px;
+		margin-bottom: 1px;
 	}
 	.nav-collapse .nav > li a:hover {
 		background: $universe;
@@ -94,6 +97,9 @@
 	}
 	.cog {
 		margin-top: 0px;
+		i {
+			font-size: 18px;
+		}
 	}
 }
 @media (min-width: 480px) and (max-width: 767px) {
@@ -111,14 +117,15 @@
 	}
 	#notifications {
 		border-radius: 0px;
-		margin: 5px 0px 2px;
+		margin: 5px 0px 1px;
+		box-shadow: none;
 	}
 	.navbar .unread {
 		background: $blackhole!important;
 	}
 	#notifications-area {
 		width:100%;
-		margin: 0 0 2px;
+		margin: 0 0 1px;
 	}
 	.navbar #notification:last-of-type {
 		border-bottom: 1px solid $midnight;
@@ -141,6 +148,8 @@
 		color: #fff;
 		text-shadow: 0 0 0;
 		text-align: center;
+		padding: 5px 15px;
+		margin-bottom: 1px;
 	}
 	.nav-collapse .nav > li a:hover {
 		background: $universe;
@@ -217,6 +226,9 @@
 	}
 	.cog {
 		margin-top: 0px;
+		i {
+			font-size: 18px;
+		}
 	}
 }
 @media (min-width: 270px) and (max-width: 480px) {
@@ -238,14 +250,15 @@
 	}
 	#notifications {
 		border-radius: 0px;
-		margin: 5px 0px 2px;
+		margin: 5px 0px 1px;
+		box-shadow: none;
 	}
 	.navbar .unread {
 		background: $blackhole!important;
 	}
 	#notifications-area {
 		width:100%;
-		margin: 0 0 2px;
+		margin: 0 0 1px;
 	}
 	.navbar #notification:last-of-type {
 		border-bottom: 1px solid $midnight;
@@ -273,6 +286,8 @@
 		color: #fff;
 		text-shadow: 0 0 0;
 		text-align: center;
+		padding: 5px 15px;
+		margin-bottom: 1px;
 	}
 	.nav-collapse .nav > li a:hover {
 		background: $universe;
@@ -376,5 +391,8 @@
 	}
 	.cog {
 		margin-top: 0px;
+		i {
+			font-size: 18px;
+		}
 	}
 }
